--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,3 +41,9 @@ jobs:
         run: |
           make
           make test
+
+      - name: Push artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: artifacts
+          path: ./target/release/extism-js
